--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         body {
             font-family: Arial, sans-serif;
             font-size: 20px;
-            background-color: #f0f8ff;
+            background-color: #a6d7fa;
             color: #333;
             text-align: center;
             padding: 50px;
@@ -17,6 +17,6 @@
 </head>
 <body>
     <h1>¡Bienvenido a mi página web!</h1>
-    <p>Esta es una página simple creada como ejemplo.</p>
+    <p>Esta es mi primera pagna web :3</p>
 </body>
 </html>
