--- a/index.html
+++ b/index.html
@@ -12,11 +12,14 @@
             color: #333;
             text-align: center;
             padding: 50px;
+            h1 {
+            color: #2176FF; /* Azul colvato */
+        }
         }
     </style>
 </head>
 <body>
     <h1>¡Bienvenido a mi página web!</h1>
-    <p>Esta es mi primera pagna web :3</p>
+    <p>Esta es mi primera pagina web :3</p>
 </body>
 </html>
