--- a/index.html
+++ b/index.html
@@ -12,14 +12,31 @@
             color: #333;
             text-align: center;
             padding: 50px;
+        }
             h1 {
             color: #2176FF; /* Azul colvato */
         }
+         /* Oculta el iframe de YouTube */
+        .audio-youtube {
+            width: 0;
+            height: 0;
+            opacity: 0;
+            pointer-events: none;
+            position: absolute;
         }
     </style>
 </head>
 <body>
     <h1>¡Bienvenido a mi página web!</h1>
     <p>Esta es mi primera pagina web :3</p>
+    
+    <!-- YouTube audio oculto -->
+    <iframe class="audio-youtube" 
+        src="https://www.youtube.com/watch?v=QwvkPVWrifE"
+        allow="autoplay"
+        allowfullscreen
+        frameborder="0">
+    </iframe>
+ 
 </body>
 </html>
