--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         }
         
             h1 {
-            color: #2176FF; /* Azul colvato */
+            color: #8abdd7; /* Azul colvato */
         }
         }
     </style>
