--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         body {
             font-family: Arial, sans-serif;
             font-size: 20px;
-            background-color: #a6d7fa;
+            background-color: #4182a4;
             color: #333;
             text-align: center;
             padding: 50px;
