--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
         body {
             font-family: Arial, sans-serif;
             font-size: 20px;
-            background-color: #176a95;
+            background-color: #a5ccdf;
             color: #333;
             text-align: center;
             padding: 50px;
         }
         
             h1 {
-            color: #8abdd7; /* Azul colvato */
+            color: #176a95; /* Azul colvato */
         }
         }
     </style>
