--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <h1>¡Bienvenido a mi página web!</h1>
     <p>Esta es mi primera pagina web :3</p>
      <audio controls>
-      <source src="file:///C:/Users/Laboratorio%20Info/Downloads/scizzie%20-%20aquatic%20ambience.mp3" type="audio/mpeg">
+      <source src="https://www.youtube.com/watch?v=DP3rDP02lE0" type="audio/mpeg">
       Tu navegador no soporta la reproducción de audio.
     </audio>
 </body>
