--- a/index.html
+++ b/index.html
@@ -17,11 +17,33 @@
             h1 {
             color: #176a95; /* Azul colvato */
         }
+        .video-container {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            margin: 30px 0;
+        }
+        video {
+            width: 400px;
+            max-width: 90vw;
+            border-radius: 10px;
+            box-shadow: 0 4px 16px rgba(0,0,0,0.2);
         }
     </style>
 </head>
 <body>
     <h1>¡Bienvenido a mi página web!</h1>
     <p>Esta es mi primera pagina web :3</p>
+     <div class="video-container">
+        <video src="video.mp4" autoplay muted loop playsinline></video>
+        <!-- 
+        Reemplaza "video.mp4" por el nombre de tu archivo de video.
+        "autoplay" hace que el video se inicie solo.
+        "muted" es necesario para que autoplay funcione en la mayoría de navegadores.
+        "loop" hace que el video se repita.
+        "playsinline" evita que el video se ponga en pantalla completa en móviles.
+        Sin "controls" no aparecen los botones.
+        -->
+    </div>
 </body>
 </html>
