--- a/index.html
+++ b/index.html
@@ -34,16 +34,9 @@
 <body>
     <h1>¡Bienvenido a mi página web!</h1>
     <p>Esta es mi primera pagina web :3</p>
-     <div class="video-container">
-        <video src="FRUTIGER AERO. La promesa de un futuro BRILLANTE ILY4A.mp4" autoplay muted loop playsinline></video>
-        <!-- 
-        Reemplaza "video.mp4" por el nombre de tu archivo de video.
-        "autoplay" hace que el video se inicie solo.
-        "muted" es necesario para que autoplay funcione en la mayoría de navegadores.
-        "loop" hace que el video se repita.
-        "playsinline" evita que el video se ponga en pantalla completa en móviles.
-        Sin "controls" no aparecen los botones.
-        -->
+      <div class="video-container">
+        <video src="video.mp4" autoplay muted loop playsinline controls></video>
+        <!-- Reemplaza "video.mp4" por el nombre de tu archivo de video -->
     </div>
 </body>
 </html>
