--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
     <h1>¡Bienvenido a mi página web!</h1>
     <p>Esta es mi primera pagina web :3</p>
       <div class="video-container">
-        <video controls autoplay muted loop playsinline width="400">
-  <source src="FRUTIGER AERO. La promesa de un futuro BRILLANTE ILY4A.mp4" type="video/mp4">
+      <video controls width="400">
+  <source src="FRUTIGER%20AERO.%20La%20promesa%20de%20un%20futuro%20BRILLANTE%20ILY4A.mp4" type="video/mp4">
   Tu navegador no soporta la reproducción de video.
 </video>
     </div>
