--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <p>Esta es mi primera pagina web :3</p>
       <div class="video-container">
       <video controls width="400">
-  <source src="FRUTIGER%20AERO.%20La%20promesa%20de%20un%20futuro%20BRILLANTE%20ILY4A.mp4" type="video/mp4">
+  <source src="FRUTIGER AERO. La promesa de un futuro BRILLANTE ILY4A.mp4" type="video/mp4">
   Tu navegador no soporta la reproducción de video.
 </video>
     </div>
