--- a/index.html
+++ b/index.html
@@ -35,10 +35,7 @@
     <h1>¡Bienvenido a mi página web!</h1>
     <p>Esta es mi primera pagina web :3</p>
       <div class="video-container">
-      <video controls width="400">
-  <source src="FRUTIGER AERO. La promesa de un futuro BRILLANTE ILY4A.mp4" type="video/mp4">
-  Tu navegador no soporta la reproducción de video.
-</video>
+       <video src="frutiger-aero.mp4" autoplay muted loop playsinline controls></video>
     </div>
 </body>
 </html>
