--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
         <p>Ahora puedes ver videos y disfrutar de un diseño más bonito y funcional.</p>
         <div class="video-container">
             <div class="video-title" id="videoTitle">FRUTIGER AERO: La promesa de un futuro BRILLANTE</div>
-            <video id="mainVideo" src="videos/FRUTIGER AERO. La promesa de un futuro BRILLANTE ILY4A.mp4" controls autoplay muted loop playsinline></video>
+            <video id="mainVideo" src="Video de Karina.mp4" controls autoplay muted loop playsinline></video>
             <div class="video-desc" id="videoDesc">
                 Un video sobre el famoso estilo Frutiger Aero y el optimismo futurista de los 2000s.
             </div>
