--- a/index.html
+++ b/index.html
@@ -95,17 +95,12 @@
     </style>
 </head>
 <body>
-    <div class="topbar">
-        <button class="btn" onclick="toggleDarkMode()">🌙/☀️</button>
-    </div>
     <div class="container">
         <h1>¡Bienvenido a mi página web mejorada!</h1>
-        <p>Ahora puedes ver videos y disfrutar de un diseño más bonito y funcional.</p>
         <div class="video-container">
-            <div class="video-title" id="videoTitle">FRUTIGER AERO: La promesa de un futuro BRILLANTE</div>
+            <div class="video-title" id="videoTitle">un video antes de que me arrepienta</div>
             <video id="mainVideo" src="Video de Karina.mp4" controls autoplay muted loop playsinline></video>
             <div class="video-desc" id="videoDesc">
-                Un video sobre el famoso estilo Frutiger Aero y el optimismo futurista de los 2000s.
             </div>
             <button class="btn" onclick="nextVideo()">Cambiar Video</button>
         </div>
