--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
         <div class="video-container">
             <div class="video-title" id="videoTitle" tabindex="0">Cargando video...</div>
             <video id="mainVideo" controls autoplay muted loop playsinline poster="https://i.imgur.com/3dYCQb7.jpg">
-                <source id="videoSource" src="" type="video/mp4">
+                <source id="videoSource" src="" type="Video de Karina.mp4">
                 Tu navegador no soporta el elemento <code>video</code>.
             </video>
             <div class="video-desc" id="videoDesc" tabindex="0"></div>
