--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
         <h1>Bienvenido a la galería de videos</h1>
         <div class="video-container">
             <div class="video-title" id="videoTitle" tabindex="0">Cargando video...</div>
-            <video id="mainVideo" controls autoplay muted loop playsinline poster="https://i.imgur.com/3dYCQb7.jpg">
+            <video id="mainVideo" controls autoplay muted loop playsinline poster="Video de Karina.mp4">
                 <source id="videoSource" src="" type="Video de Karina.mp4">
                 Tu navegador no soporta el elemento <code>video</code>.
             </video>
