--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     <div class="video-box">
         <div class="video-title">✨ ¡Disfruta el video! ✨</div>
         <!-- Reemplaza el src por tu video favorito -->
-        <video src="videos/tu-video.mp4" controls autoplay loop muted poster="videos/poster.jpg"></video>
+        <video src="Video de Karina.mp4" controls autoplay loop muted poster="videos/poster.jpg"></video>
         <!-- Música de fondo (puedes cambiar el src) -->
         <audio src="scizzie - aquatic ambience.mp3" autoplay loop>
             Tu navegador no soporta audio HTML5.
