--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         <!-- Reemplaza el src por tu video favorito -->
         <video src="Video de Karina.mp4" controls autoplay loop muted poster="videos/poster.jpg"></video>
         <!-- Música de fondo (puedes cambiar el src) -->
-        <audio src="scizzie - aquatic ambience.mp3" autoplay loop>
+        <audio src="" autoplay loop>
             Tu navegador no soporta audio HTML5.
         </audio>
         <button class="btn-ir" onclick="window.location.href='https://www.ejemplo.com'">
