--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         <audio src="" autoplay loop>
             Tu navegador no soporta audio HTML5.
         </audio>
-        <button class="btn-ir" onclick="window.location.href='https://www.ejemplo.com'">
+        <button class="btn-ir" onclick="window.location.href='https://angels207.github.io/avanzado/'">
             Ir a otra página
         </button>
     </div>
